# mostro_app

./: .metadata  README.md  analysis_options.yaml  pubspec.yaml
android/app/: build.gradle
doc/: auth_flow.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  auth_screen.dart  main.dart  routing.dart  theme.dart
lib/application/: auth_service.dart
lib/asset_paths/: icon_paths.dart
lib/data/: keys_repository.dart  secure_local_storage.dart
lib/domain/: keys.dart
lib/providers/: providers.dart  providers.g.dart
lib/routing/: builder.dart  routes.dart  routing.dart  shell_scaffold.dart
lib/utils/: utils.dart
lib/widgets/: scaffold.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/RunnerTests/: RunnerTests.swift  RunnerTestsLaunchTests.swift
mostro_sdk/: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml
mostro_sdk/android/: build.gradle  settings.gradle
mostro_sdk/ffi-plugin/: Cargo.toml  Makefile.toml  build.rs  ffi_plugin.h
mostro_sdk/ffi-plugin/src/: client.rs  common.rs  crypto.rs  keys.rs  lib.rs
mostro_sdk/ffi-plugin/src/client/: options.rs
mostro_sdk/ffi-plugin/src/common/: memory_management.rs  option.rs  result.rs  runtime.rs  utils.rs
mostro_sdk/ffi-plugin/src/crypto/: aes.rs  argon2.rs
mostro_sdk/ffi-plugin/src/keys/: public_key.rs  secret_key.rs
mostro_sdk/src/: CMakeLists.txt  mostro_sdk.c
test/: test_data.txt  widget_test.dart
(+126 files in other folders)
